sm2s-rzg2ul: Added support for i2c eeprom in dts
Signed-off-by: Anil Patel <anil.patel@softwebsolutions.com>

--- a/arch/arm/dts/msc-sm2s-rzg2ul.dts
+++ b/arch/arm/dts/msc-sm2s-rzg2ul.dts
@@ -50,6 +50,16 @@
 				<RZG2L_PINMUX(10, 3, 1)>,
 				<RZG2L_PINMUX(10, 4, 1)>;
 	};
+
+	i2c0_pins: i2c0 {
+		pins = "RIIC0_SDA", "RIIC0_SCL";
+		input-enable;
+	};
+
+	i2c1_pins: i2c1 {
+		pins = "RIIC1_SDA", "RIIC1_SCL";
+		input-enable;
+	};
 };
 
 &xinclk {
@@ -93,6 +103,34 @@
 
 &i2c0 {
 	status = "okay";
+
+	pinctrl-0 = <&i2c0_pins>;
+	pinctrl-names = "default";
+	clock-frequency = <100000>;
+
+	module_eeprom@50 {
+		compatible = "atmel,24c64";
+		reg = <0x50>;
+		pagesize = <32>;
+	};
+
+	module_eeprom@57 {
+		compatible = "atmel,24c64";
+		reg = <0x57>;
+		pagesize = <32>;
+	};
+};
+
+&i2c1 {
+	pinctrl-0 = <&i2c1_pins>;
+	pinctrl-names = "default";
+	clock-frequency = <100000>;
+	status = "okay";
+	module_eeprom@57 {
+		compatible = "atmel,24c64";
+		reg = <0x57>;
+		pagesize = <32>;
+	};
 };
 
 &spibsc {
