sm2s-rzg2ul: added support for boardinfo read write
Signed-off-by: Anil Patel <anil.patel@softwebsolutions.com>

--- a/configs/sm2s-rzg2ul_defconfig
+++ b/configs/sm2s-rzg2ul_defconfig
@@ -9,10 +9,13 @@ CONFIG_DEFAULT_DEVICE_TREE="msc-sm2s-rzg2ul"
 CONFIG_RCAR_GEN3=y
 CONFIG_R9A07G043U=y
 CONFIG_TARGET_SM2S_RZG2UL=y
+CONFIG_CMD_BOARDINFO=y
+CONFIG_CMD_FDTLOAD=y
 # CONFIG_SPL is not set
 CONFIG_FIT=y
 CONFIG_SUPPORT_RAW_INITRD=y
 CONFIG_DEFAULT_FDT_FILE="msc-sm2s-rzg2ul.dtb"
+CONFIG_DISPLAY_BOARDINFO_LATE=y
 CONFIG_BOARD_LATE_INIT=y
 CONFIG_HUSH_PARSER=y
 CONFIG_CMD_BOOTZ=y
@@ -48,6 +51,8 @@ CONFIG_RZG2L_GPIO=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_RCAR_IIC=y
 CONFIG_SYS_I2C_RZG2L_RIIC=y
+CONFIG_MISC=y
+CONFIG_I2C_EEPROM=y
 CONFIG_SH_SDHI=y
 CONFIG_DM_SPI_FLASH=y
 CONFIG_SPI_FLASH_ATMEL=y
