--- a/configs/sm2s-rzg2ul_defconfig
+++ b/configs/sm2s-rzg2ul_defconfig
@@ -46,6 +46,8 @@ CONFIG_SYSCON=y
 CONFIG_CLK=y
 CONFIG_CLK_RENESAS=y
 CONFIG_CLK_R9A07G043U=y
+CONFIG_GPIO_HOG=y
+CONFIG_DM_GPIO_LOOKUP_LABEL=y
 CONFIG_RCAR_GPIO=y
 CONFIG_RZG2L_GPIO=y
 CONFIG_DM_I2C=y
