--- a/board/msc/sm2s_rzg2ul/Kconfig
+++ b/board/msc/sm2s_rzg2ul/Kconfig
@@ -1,3 +1,5 @@
+if TARGET_SM2S_RZG2UL
+
 source "board/msc/common/Kconfig"
 
 config SYS_SOC
@@ -11,3 +13,5 @@ config SYS_VENDOR
 
 config SYS_CONFIG_NAME
 	default "msc-sm2s-rzg2ul"
+
+endif
