--- a/arch/arm/dts/msc-sm2s-rzg2ul.dts
+++ b/arch/arm/dts/msc-sm2s-rzg2ul.dts
@@ -10,6 +10,7 @@
 #include "r9a07g043u11.dtsi"
 #include "r9a07g043u11-u-boot.dtsi"
 #include <dt-bindings/pinctrl/rzg2l-pinctrl.h>
+#include <dt-bindings/net/ti-dp83867.h>
 
 / {
 	model = "sm2s-rzg2ul";
@@ -78,6 +79,23 @@
 		pinmux = <RZG2L_PINMUX(8, 0, 3)>, /* SCIF1_RXD */
 			<RZG2L_PINMUX(8, 1, 3)>;/*SCIF1_TXD*/
 	};
+
+	eth0_pins: eth0 {
+                pinmux = <RZG2L_PINMUX(4, 3, 1)>, /* ET0_MDC */
+                         <RZG2L_PINMUX(4, 4, 1)>, /* ET0_MDIO */
+                         <RZG2L_PINMUX(1, 0, 1)>, /* ET0_TXC */
+                         <RZG2L_PINMUX(1, 1, 1)>, /* ET0_TX_CTL */
+                         <RZG2L_PINMUX(1, 2, 1)>, /* ET0_TXD0 */
+                         <RZG2L_PINMUX(1, 3, 1)>, /* ET0_TXD1 */
+                         <RZG2L_PINMUX(1, 4, 1)>, /* ET0_TXD2 */
+                         <RZG2L_PINMUX(2, 0, 1)>, /* ET0_TXD3 */
+                         <RZG2L_PINMUX(3, 0, 1)>, /* ET0_RXC */
+                         <RZG2L_PINMUX(3, 1, 1)>, /* ET0_RX_CTL */
+                         <RZG2L_PINMUX(3, 2, 1)>, /* ET0_RXD0 */
+                         <RZG2L_PINMUX(3, 3, 1)>, /* ET0_RXD1 */
+                         <RZG2L_PINMUX(4, 0, 1)>, /* ET0_RXD2 */
+                         <RZG2L_PINMUX(4, 1, 1)>; /* ET0_RXD3 */
+        };
 };
 
 &xinclk {
@@ -161,6 +179,29 @@
                 spi-rx-bus-width = <1>;
                 reg = <0>;
                 status = "okay";
+        };
+};
+
+&eth0 {
+        pinctrl-0 = <&eth0_pins>;
+        pinctrl-names = "default";
+        phy-handle = <&ethphy0>;
+        phy-mode = "rgmii";
+        status = "okay";
+	
+	mdio {
+                #address-cells = <1>;
+                #size-cells = <0>;
+
+                ethphy0: ethernet-phy@0 {
+                        compatible = "ethernet-phy-ieee802.3-c22";
+                        reg = <0x0>;
+                        ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
+                        ti,tx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
+                        ti,fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
+                        ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
+                        enet-phy-lane-no-swap;
+                };
         };
 };
 
