--- a/arch/arm/dts/msc-sm2s-rzg2ul.dts
+++ b/arch/arm/dts/msc-sm2s-rzg2ul.dts
@@ -194,13 +194,13 @@
                 #size-cells = <0>;
 
                 ethphy0: ethernet-phy@0 {
-                        compatible = "ethernet-phy-ieee802.3-c22";
+                        compatible = "ethernet-phy-id2000.a231";
                         reg = <0x0>;
                         ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
                         ti,tx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
                         ti,fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
-                        ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
-                        enet-phy-lane-no-swap;
+			ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
+			ti,min-output-impedance;
                 };
         };
 };
