--- a/configs/sm2s-rzg2ul_defconfig
+++ b/configs/sm2s-rzg2ul_defconfig
@@ -41,7 +41,6 @@ CONFIG_ENV_OVERWRITE=y
 CONFIG_ENV_IS_IN_SPI_FLASH=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_VERSION_VARIABLE=y
-CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_REGMAP=y
 CONFIG_SYSCON=y
 CONFIG_CLK=y
@@ -62,12 +61,7 @@ CONFIG_SPI_FLASH_ATMEL=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_WINBOND=y
 CONFIG_BITBANGMII=y
-CONFIG_PHY_MICREL=y
-CONFIG_PHY_MICREL_KSZ90X1=y
-CONFIG_PHY_TI_DP83867=y
-CONFIG_PHY_TI_GENERIC=y
 CONFIG_DM_ETH=y
-CONFIG_DM_ETH_PHY=y
 CONFIG_RENESAS_RAVB=y
 CONFIG_PCI=y
 CONFIG_PCI_RCAR_GEN3=y
@@ -89,3 +83,10 @@ CONFIG_USB_STORAGE=y
 CONFIG_WDT=y
 CONFIG_RENESAS_RZG2LWDT=y
 CONFIG_OF_LIBFDT_OVERLAY=y
+
+CONFIG_NET_RANDOM_ETHADDR=y
+CONFIG_DM_ETH_PHY=y
+CONFIG_PHY_GIGE=y
+CONFIG_PHY=y
+CONFIG_PHY_REALTEK=y
+
