--- a/arch/arm/dts/msc-sm2s-rzg2l.dts
+++ b/arch/arm/dts/msc-sm2s-rzg2l.dts
@@ -10,6 +10,7 @@
 #include "r9a07g044l.dtsi"
 #include "r9a07g044l-u-boot.dtsi"
 #include <dt-bindings/pinctrl/rzg2l-pinctrl.h>
+#include <dt-bindings/net/ti-dp83867.h>
 
 / {
 	model = "sm2s-rzg2l";
@@ -114,8 +115,14 @@
 
 	phy-handle = <&phy0>;
 	phy-mode = "rgmii";
-	phy0: ethernet-phy@7 {
-		reg = <7>;
+
+	phy0: ethernet-phy@0 {
+        	compatible = "ethernet-phy-id2000.a231";
+        	reg = <0>;
+        	ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
+        	ti,tx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
+        	ti,fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
+        	ti,min-output-impedance;
 	};
 };
 
