--- a/configs/sm2s-rzg2l_defconfig
+++ b/configs/sm2s-rzg2l_defconfig
@@ -64,8 +64,6 @@ CONFIG_SPI_FLASH_ATMEL=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_WINBOND=y
 CONFIG_BITBANGMII=y
-CONFIG_PHY_MICREL=y
-CONFIG_PHY_MICREL_KSZ90X1=y
 CONFIG_DM_ETH=y
 CONFIG_RENESAS_RAVB=y
 CONFIG_PCI=y
@@ -88,3 +86,9 @@ CONFIG_USB_STORAGE=y
 CONFIG_WDT=y
 CONFIG_RENESAS_RZG2LWDT=y
 CONFIG_OF_LIBFDT_OVERLAY=y
+
+CONFIG_NET_RANDOM_ETHADDR=y
+CONFIG_DM_ETH_PHY=y
+CONFIG_PHY_GIGE=y
+CONFIG_PHY=y
+CONFIG_PHY_REALTEK=y
